[gd_scene load_steps=38 format=2]

[ext_resource path="res://Sprites/animations/draw.tres" type="SpriteFrames" id=1]
[ext_resource path="res://Scripts/oldLORED/AnimatedSprite.gd" type="Script" id=2]
[ext_resource path="res://Sprites/Menu/Alarm.png" type="Texture" id=3]
[ext_resource path="res://Sprites/emote/Bubble.png" type="Texture" id=4]
[ext_resource path="res://Styles/Master Theme.tres" type="Theme" id=5]
[ext_resource path="res://Fonts/Roboto-MediumItalic.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Fonts/Roboto-BoldItalic.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://Fonts/Roboto-BlackItalic.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://Prefabs/FuelBar.tscn" type="PackedScene" id=9]
[ext_resource path="res://Sprites/Menu/Halt.png" type="Texture" id=10]
[ext_resource path="res://Sprites/animations/autobuyer.tres" type="SpriteFrames" id=11]
[ext_resource path="res://Sprites/resources/axe.png" type="Texture" id=12]
[ext_resource path="res://Styles/Labels/Num.tres" type="DynamicFont" id=13]
[ext_resource path="res://Sprites/Menu/Check.png" type="Texture" id=14]
[ext_resource path="res://Scripts/LORED/LORED Vico.gd" type="Script" id=15]
[ext_resource path="res://Sprites/Menu/Info.png" type="Texture" id=16]
[ext_resource path="res://Sprites/Menu/Jobs.png" type="Texture" id=17]
[ext_resource path="res://Sprites/Menu/awake.png" type="Texture" id=18]
[ext_resource path="res://Sprites/Menu/Level.png" type="Texture" id=20]

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.0823529, 0.0823529, 0.0823529, 1 )
border_color = Color( 1, 1, 1, 0.431373 )
border_blend = true
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_color = Color( 1, 1, 1, 0.1 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.15, 0.15, 0.15, 1 )
draw_center = false
border_color = Color( 1, 1, 1, 0.501961 )
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_color = Color( 1, 1, 1, 0.35 )
shadow_size = 10
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=19]
bg_color = Color( 1, 1, 1, 0.26 )
border_color = Color( 1, 1, 1, 0.501961 )
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=22]
bg_color = Color( 1, 1, 1, 0.501961 )
border_color = Color( 1, 1, 1, 0 )
border_blend = true
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=23]
bg_color = Color( 1, 1, 1, 1 )
draw_center = false
border_width_bottom = 4
border_color = Color( 0, 0, 0, 0.33 )
border_blend = true
expand_margin_left = 10.0
expand_margin_right = 10.0
expand_margin_bottom = 10.0
shadow_color = Color( 0, 0, 0, 0.341176 )

[sub_resource type="StyleBoxFlat" id=20]
draw_center = false

[sub_resource type="DynamicFont" id=18]
size = 12
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=5]
size = 12
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=6]
size = 12
outline_color = Color( 0, 0, 0, 0.6 )
font_data = ExtResource( 6 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 1, 1, 0.0509804 )
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color( 0.0745098, 0.0745098, 0.0745098, 0.0392157 )
border_blend = true
corner_radius_top_left = 35
corner_radius_top_right = 35
corner_radius_bottom_right = 35
corner_radius_bottom_left = 35
expand_margin_left = 5.0
expand_margin_right = 5.0
expand_margin_top = 5.0
expand_margin_bottom = 5.0

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.152941, 0.152941, 0.152941, 1 )
border_color = Color( 0, 0, 0, 1 )
border_blend = true
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_color = Color( 0, 0, 0, 0.341176 )

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 1, 1, 1, 0.08 )

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 1, 1, 1, 0.04 )

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 1, 1, 1, 0.0392157 )
draw_center = false

[sub_resource type="StyleBoxFlat" id=7]
draw_center = false

[sub_resource type="StyleBoxFlat" id=25]
bg_color = Color( 1, 1, 1, 0.1 )
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id=26]
draw_center = false
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id=27]
bg_color = Color( 1, 1, 1, 1 )

[node name="LORED" type="MarginContainer"]
margin_right = 201.0
margin_bottom = 125.0
rect_min_size = Vector2( 201, 0 )
rect_pivot_offset = Vector2( -150, -54 )
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource( 15 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="bg_grey" type="Panel" parent="."]
margin_right = 201.0
margin_bottom = 125.0
rect_pivot_offset = Vector2( -61, -6 )
custom_styles/panel = SubResource( 10 )

[node name="bg_color" type="Panel" parent="."]
self_modulate = Color( 1, 0, 0, 1 )
margin_right = 201.0
margin_bottom = 125.0
rect_pivot_offset = Vector2( -61, -6 )
custom_styles/panel = SubResource( 11 )

[node name="progress" type="Node2D" parent="."]

[node name="current" type="Panel" parent="progress"]
margin_right = 24.0
margin_bottom = 121.0
rect_min_size = Vector2( 2, 0 )
rect_clip_content = true
custom_styles/panel = SubResource( 19 )

[node name="edge" type="Panel" parent="progress/current"]
self_modulate = Color( 1, 0, 0, 1 )
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -2.0
rect_min_size = Vector2( 1, 0 )
rect_clip_content = true
custom_styles/panel = SubResource( 22 )

[node name="m" type="MarginContainer" parent="."]
margin_right = 201.0
margin_bottom = 125.0
rect_clip_content = true
custom_constants/margin_right = 0
custom_constants/margin_top = 1
custom_constants/margin_left = 0
custom_constants/margin_bottom = 0

[node name="v" type="VBoxContainer" parent="m"]
margin_top = 1.0
margin_right = 201.0
margin_bottom = 125.0
rect_pivot_offset = Vector2( 16, 3 )
custom_constants/separation = 0

[node name="top" type="MarginContainer" parent="m/v"]
margin_right = 201.0
margin_bottom = 88.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="bg" type="Panel" parent="m/v/top"]
margin_left = 10.0
margin_top = 10.0
margin_right = 191.0
margin_bottom = 78.0
rect_pivot_offset = Vector2( -61, -6 )
custom_styles/panel = SubResource( 23 )

[node name="v" type="VBoxContainer" parent="m/v/top"]
margin_left = 10.0
margin_top = 10.0
margin_right = 191.0
margin_bottom = 78.0

[node name="mid" type="HBoxContainer" parent="m/v/top/v"]
margin_right = 181.0
margin_bottom = 68.0
custom_constants/separation = 10
alignment = 1

[node name="v2" type="VBoxContainer" parent="m/v/top/v/mid"]
margin_right = 103.0
margin_bottom = 68.0
size_flags_horizontal = 3
alignment = 1

[node name="resource" type="HBoxContainer" parent="m/v/top/v/mid/v2"]
margin_top = 16.0
margin_right = 103.0
margin_bottom = 52.0
size_flags_vertical = 4

[node name="icon" type="Panel" parent="m/v/top/v/mid/v2/resource"]
margin_right = 36.0
margin_bottom = 36.0
rect_min_size = Vector2( 36, 36 )
size_flags_horizontal = 0
size_flags_vertical = 4
custom_styles/panel = SubResource( 20 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="m/v/top/v/mid/v2/resource/icon"]
position = Vector2( 18, 18 )
texture = ExtResource( 12 )

[node name="shadow" type="Sprite" parent="m/v/top/v/mid/v2/resource/icon/Sprite"]
self_modulate = Color( 0, 0, 0, 1 )
show_behind_parent = true
position = Vector2( 2, 2 )
texture = ExtResource( 12 )

[node name="v" type="VBoxContainer" parent="m/v/top/v/mid/v2/resource"]
margin_left = 40.0
margin_right = 103.0
margin_bottom = 36.0
custom_constants/separation = 0
alignment = 1

[node name="amount" type="Label" parent="m/v/top/v/mid/v2/resource/v"]
modulate = Color( 0.806152, 0.806152, 0.806152, 1 )
self_modulate = Color( 0.89, 0, 0, 1 )
margin_top = 2.0
margin_right = 63.0
margin_bottom = 19.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 13 )
text = "123e123"

[node name="production" type="Label" parent="m/v/top/v/mid/v2/resource/v"]
unique_name_in_owner = true
margin_top = 19.0
margin_right = 63.0
margin_bottom = 34.0
mouse_filter = 1
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 18 )
text = "-123e123/s"

[node name="resource2" type="HBoxContainer" parent="m/v/top/v/mid/v2"]
visible = false
margin_top = 40.0
margin_right = 103.0
margin_bottom = 76.0
size_flags_vertical = 4

[node name="icon" type="Panel" parent="m/v/top/v/mid/v2/resource2"]
margin_right = 36.0
margin_bottom = 36.0
rect_min_size = Vector2( 36, 36 )
size_flags_horizontal = 0
size_flags_vertical = 4
custom_styles/panel = SubResource( 20 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="m/v/top/v/mid/v2/resource2/icon"]
position = Vector2( 18, 18 )
texture = ExtResource( 12 )

[node name="shadow" type="Sprite" parent="m/v/top/v/mid/v2/resource2/icon/Sprite"]
self_modulate = Color( 0, 0, 0, 1 )
show_behind_parent = true
position = Vector2( 2, 2 )
texture = ExtResource( 12 )

[node name="v" type="VBoxContainer" parent="m/v/top/v/mid/v2/resource2"]
margin_left = 40.0
margin_right = 103.0
margin_bottom = 36.0
custom_constants/separation = 0
alignment = 1

[node name="amount" type="Label" parent="m/v/top/v/mid/v2/resource2/v"]
modulate = Color( 0.806152, 0.806152, 0.806152, 1 )
self_modulate = Color( 0.89, 0, 0, 1 )
margin_top = 2.0
margin_right = 63.0
margin_bottom = 19.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 13 )
text = "123e123"

[node name="production" type="Label" parent="m/v/top/v/mid/v2/resource2/v"]
margin_top = 19.0
margin_right = 63.0
margin_bottom = 34.0
mouse_filter = 1
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 18 )
text = "-123e123/s"

[node name="status" type="RichTextLabel" parent="m/v/top/v/mid/v2"]
unique_name_in_owner = true
visible = false
margin_top = 40.0
margin_right = 103.0
margin_bottom = 72.0
rect_min_size = Vector2( 95, 0 )
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 4
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/italics_font = SubResource( 5 )
custom_fonts/normal_font = SubResource( 6 )
bbcode_enabled = true
bbcode_text = "[center]Letting Coal
catch up."
text = "Letting Coal
catch up."
fit_content_height = true
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="animation" type="Panel" parent="m/v/top/v/mid"]
margin_left = 113.0
margin_right = 181.0
margin_bottom = 68.0
rect_min_size = Vector2( 68, 68 )
size_flags_horizontal = 4
size_flags_vertical = 4
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="m/v/top/v/mid/animation"]
position = Vector2( 34, 34 )
scale = Vector2( 0.5, 0.5 )
frames = ExtResource( 1 )
animation = "ww"
playing = true
script = ExtResource( 2 )

[node name="Timer" type="Timer" parent="m/v/top/v/mid/animation/AnimatedSprite"]

[node name="DRAW_PLATE throw" type="AnimatedSprite" parent="m/v/top/v/mid/animation"]
visible = false
position = Vector2( 34, 34 )
scale = Vector2( 0.5, 0.5 )
frames = ExtResource( 1 )
animation = "ww"
playing = true

[node name="bot" type="MarginContainer" parent="m/v"]
margin_top = 88.0
margin_right = 201.0
margin_bottom = 124.0

[node name="bg_grey" type="Panel" parent="m/v/bot"]
margin_right = 201.0
margin_bottom = 36.0
rect_pivot_offset = Vector2( -61, -6 )
custom_styles/panel = SubResource( 13 )

[node name="m" type="MarginContainer" parent="m/v/bot"]
margin_right = 201.0
margin_bottom = 36.0
custom_constants/margin_right = 0
custom_constants/margin_top = 0
custom_constants/margin_left = 0
custom_constants/margin_bottom = 0

[node name="h" type="HBoxContainer" parent="m/v/bot/m"]
margin_right = 201.0
margin_bottom = 36.0
custom_constants/separation = 0
alignment = 1

[node name="fuel" type="MarginContainer" parent="m/v/bot/m/h"]
unique_name_in_owner = true
margin_left = 10.0
margin_right = 46.0
margin_bottom = 36.0

[node name="pinnedFuel" parent="m/v/bot/m/h/fuel" instance=ExtResource( 9 )]
unique_name_in_owner = true
margin_left = 13.0
margin_top = 6.0
margin_right = 23.0
margin_bottom = 30.0

[node name="Button" type="Button" parent="m/v/bot/m/h/fuel"]
margin_right = 36.0
margin_bottom = 36.0
rect_min_size = Vector2( 36, 36 )
focus_mode = 0
custom_styles/hover = SubResource( 14 )
custom_styles/pressed = SubResource( 15 )
custom_styles/normal = SubResource( 16 )

[node name="info" type="MarginContainer" parent="m/v/bot/m/h"]
unique_name_in_owner = true
modulate = Color( 1, 0, 0, 1 )
margin_left = 46.0
margin_right = 82.0
margin_bottom = 36.0

[node name="icon" type="Panel" parent="m/v/bot/m/h/info"]
margin_left = 6.0
margin_top = 6.0
margin_right = 30.0
margin_bottom = 30.0
rect_min_size = Vector2( 24, 24 )
size_flags_horizontal = 4
size_flags_vertical = 4
custom_styles/panel = SubResource( 7 )

[node name="Sprite" type="Sprite" parent="m/v/bot/m/h/info/icon"]
position = Vector2( 12, 12 )
texture = ExtResource( 16 )

[node name="shadow" type="Sprite" parent="m/v/bot/m/h/info/icon/Sprite"]
self_modulate = Color( 0, 0, 0, 0.501961 )
show_behind_parent = true
position = Vector2( 2, 2 )
texture = ExtResource( 16 )

[node name="Button" type="Button" parent="m/v/bot/m/h/info"]
margin_right = 36.0
margin_bottom = 36.0
rect_min_size = Vector2( 36, 36 )
focus_mode = 0
custom_styles/hover = SubResource( 14 )
custom_styles/pressed = SubResource( 15 )
custom_styles/normal = SubResource( 16 )

[node name="jobs" type="MarginContainer" parent="m/v/bot/m/h"]
unique_name_in_owner = true
modulate = Color( 1, 0, 0, 1 )
margin_left = 82.0
margin_right = 118.0
margin_bottom = 36.0

[node name="icon" type="Panel" parent="m/v/bot/m/h/jobs"]
margin_left = 6.0
margin_top = 6.0
margin_right = 30.0
margin_bottom = 30.0
rect_min_size = Vector2( 24, 24 )
size_flags_horizontal = 4
size_flags_vertical = 4
custom_styles/panel = SubResource( 7 )

[node name="Sprite" type="Sprite" parent="m/v/bot/m/h/jobs/icon"]
position = Vector2( 12, 12 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 17 )

[node name="shadow" type="Sprite" parent="m/v/bot/m/h/jobs/icon/Sprite"]
self_modulate = Color( 0, 0, 0, 0.501961 )
show_behind_parent = true
position = Vector2( 2, 2 )
texture = ExtResource( 17 )

[node name="Button" type="Button" parent="m/v/bot/m/h/jobs"]
margin_right = 36.0
margin_bottom = 36.0
rect_min_size = Vector2( 36, 36 )
focus_mode = 0
custom_styles/hover = SubResource( 14 )
custom_styles/pressed = SubResource( 15 )
custom_styles/normal = SubResource( 16 )

[node name="sleep" type="MarginContainer" parent="m/v/bot/m/h"]
unique_name_in_owner = true
modulate = Color( 1, 0, 0, 1 )
margin_left = 118.0
margin_right = 154.0
margin_bottom = 36.0
size_flags_horizontal = 0

[node name="icon" type="Panel" parent="m/v/bot/m/h/sleep"]
margin_left = 6.0
margin_top = 6.0
margin_right = 30.0
margin_bottom = 30.0
rect_min_size = Vector2( 24, 24 )
size_flags_horizontal = 4
size_flags_vertical = 4
custom_styles/panel = SubResource( 7 )

[node name="awake" type="Sprite" parent="m/v/bot/m/h/sleep/icon"]
position = Vector2( 12, 12 )
texture = ExtResource( 18 )

[node name="shadow" type="Sprite" parent="m/v/bot/m/h/sleep/icon/awake"]
self_modulate = Color( 0, 0, 0, 0.501961 )
show_behind_parent = true
position = Vector2( 2, 2 )
texture = ExtResource( 18 )

[node name="asleep" type="Sprite" parent="m/v/bot/m/h/sleep/icon"]
visible = false
position = Vector2( 12, 12 )
texture = ExtResource( 10 )

[node name="shadow" type="Sprite" parent="m/v/bot/m/h/sleep/icon/asleep"]
self_modulate = Color( 0, 0, 0, 0.501961 )
show_behind_parent = true
position = Vector2( 2, 2 )
texture = ExtResource( 10 )

[node name="Button" type="Button" parent="m/v/bot/m/h/sleep"]
margin_right = 36.0
margin_bottom = 36.0
rect_min_size = Vector2( 36, 36 )
focus_mode = 0
mouse_default_cursor_shape = 2
custom_styles/hover = SubResource( 14 )
custom_styles/pressed = SubResource( 15 )
custom_styles/normal = SubResource( 16 )

[node name="level up" type="MarginContainer" parent="m/v/bot/m/h"]
unique_name_in_owner = true
margin_left = 154.0
margin_right = 190.0
margin_bottom = 36.0
size_flags_horizontal = 0

[node name="icon" type="Panel" parent="m/v/bot/m/h/level up"]
margin_left = 6.0
margin_top = 6.0
margin_right = 30.0
margin_bottom = 30.0
rect_min_size = Vector2( 24, 24 )
size_flags_horizontal = 4
size_flags_vertical = 4
custom_styles/panel = SubResource( 7 )

[node name="autobuy" type="AnimatedSprite" parent="m/v/bot/m/h/level up/icon"]
unique_name_in_owner = true
visible = false
position = Vector2( 12, 12 )
frames = ExtResource( 11 )
frame = 11
playing = true

[node name="Sprite" type="Sprite" parent="m/v/bot/m/h/level up/icon"]
modulate = Color( 1, 0, 0, 1 )
position = Vector2( 12, 12 )
texture = ExtResource( 20 )

[node name="shadow" type="Sprite" parent="m/v/bot/m/h/level up/icon/Sprite"]
self_modulate = Color( 0, 0, 0, 0.501961 )
show_behind_parent = true
position = Vector2( 2, 2 )
texture = ExtResource( 20 )

[node name="Check" type="Sprite" parent="m/v/bot/m/h/level up/icon"]
unique_name_in_owner = true
position = Vector2( 12, 12 )
texture = ExtResource( 14 )
__meta__ = {
"_edit_group_": true
}

[node name="shadow" type="Sprite" parent="m/v/bot/m/h/level up/icon/Check"]
self_modulate = Color( 0, 0, 0, 0.85 )
show_behind_parent = true
position = Vector2( 1, 1 )
texture = ExtResource( 14 )

[node name="Button" type="Button" parent="m/v/bot/m/h/level up"]
margin_right = 36.0
margin_bottom = 36.0
rect_min_size = Vector2( 36, 36 )
focus_mode = 0
mouse_default_cursor_shape = 2
custom_styles/hover = SubResource( 14 )
custom_styles/pressed = SubResource( 15 )
custom_styles/normal = SubResource( 16 )

[node name="alert" type="Node2D" parent="."]
unique_name_in_owner = true
visible = false
position = Vector2( 201, 0 )

[node name="Bubble" type="Sprite" parent="alert"]
texture = ExtResource( 4 )

[node name="alarm" type="Sprite" parent="alert"]
visible = false
modulate = Color( 1, 0.211765, 0, 1 )
position = Vector2( 0, 2 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="shadow" type="Sprite" parent="alert/alarm"]
self_modulate = Color( 0.296875, 0.296875, 0.296875, 1 )
show_behind_parent = true
position = Vector2( 1, 1 )
texture = ExtResource( 3 )

[node name="asleepAlert" type="Sprite" parent="alert"]
unique_name_in_owner = true
position = Vector2( 0, -1 )
texture = ExtResource( 10 )
__meta__ = {
"_edit_group_": true
}

[node name="shadow" type="Sprite" parent="alert/asleepAlert"]
self_modulate = Color( 0.296875, 0.296875, 0.296875, 1 )
show_behind_parent = true
position = Vector2( 1, 1 )
texture = ExtResource( 10 )

[node name="Fuel Progress" parent="alert" instance=ExtResource( 9 )]
unique_name_in_owner = true
visible = false
margin_left = -5.0
margin_top = -12.0
margin_right = 5.0
margin_bottom = 12.0

[node name="Button" type="Button" parent="alert"]
margin_left = -16.0
margin_top = -16.0
margin_right = 16.0
margin_bottom = 16.0
focus_mode = 0
mouse_default_cursor_shape = 2
theme = ExtResource( 5 )
custom_styles/hover = SubResource( 25 )
custom_styles/pressed = SubResource( 25 )
custom_styles/normal = SubResource( 26 )

[node name="misc" type="Node2D" parent="."]

[node name="emote" type="Node2D" parent="."]
position = Vector2( 96, -37 )

[node name="emote" type="MarginContainer" parent="emote"]
unique_name_in_owner = true
margin_left = -201.0
margin_top = -41.0
margin_right = 84.0
margin_bottom = 43.0
grow_horizontal = 0
grow_vertical = 0
mouse_filter = 2

[node name="Panel" type="Panel" parent="."]
visible = false
modulate = Color( 0.137255, 0.305882, 0.4, 1 )
margin_right = 201.0
margin_bottom = 125.0
custom_styles/panel = SubResource( 27 )

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="mouse_entered" from="m/v/bot/m/h/fuel/Button" to="." method="_on_info_mouse_entered"]
[connection signal="mouse_exited" from="m/v/bot/m/h/fuel/Button" to="." method="_on_mouse_exited"]
[connection signal="mouse_entered" from="m/v/bot/m/h/info/Button" to="." method="_on_info_mouse_entered"]
[connection signal="mouse_exited" from="m/v/bot/m/h/info/Button" to="." method="_on_mouse_exited"]
[connection signal="mouse_entered" from="m/v/bot/m/h/jobs/Button" to="." method="_on_jobs_mouse_entered"]
[connection signal="mouse_exited" from="m/v/bot/m/h/jobs/Button" to="." method="_on_mouse_exited"]
[connection signal="mouse_entered" from="m/v/bot/m/h/sleep/Button" to="." method="_on_asleep_mouse_entered"]
[connection signal="mouse_exited" from="m/v/bot/m/h/sleep/Button" to="." method="_on_mouse_exited"]
[connection signal="pressed" from="m/v/bot/m/h/sleep/Button" to="." method="_on_asleep_pressed"]
[connection signal="mouse_entered" from="m/v/bot/m/h/level up/Button" to="." method="_on_level_mouse_entered"]
[connection signal="mouse_exited" from="m/v/bot/m/h/level up/Button" to="." method="_on_mouse_exited"]
[connection signal="pressed" from="m/v/bot/m/h/level up/Button" to="." method="_on_level_pressed"]
[connection signal="mouse_entered" from="alert/Button" to="." method="_on_alert_mouse_entered"]
[connection signal="mouse_exited" from="alert/Button" to="." method="_on_mouse_exited"]
